[package]
name = "ngrok"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
anyhow = "1.0"
log = "0.4"
futures = "0.3"
futures-util = "0.3"
tokio-yamux = "0.3.17"
tokio-retry = "0.3"
url = "2.4"
ws_stream_tungstenite = "0.15.0"
async-tungstenite = { version = "0.29", features = ["tokio-runtime"] }
tokio-util = { version = "0.7.17", features = ["compat"] }

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
